# jobtask2019-trimesh-tracer

./: CMakeLists.txt  readme.md
data/: trimeshtracer.cl
source/: CMakeLists.txt  main.cpp  maths.cpp  maths.h
